@@ -172,6 +172,25 @@ default value: none, must be set to an existing queue.
 .if !\n(Pb .ig Ig
 [internal type: string]
 .Ig
+.Al down_on_error
+Set a node's state to "down" if MOM reports a message beginning with the string
+"ERROR".  This might interfere with moab's node error handling.  See the HEALTH
+CHECK section in pbs_mom(8B).  This is an EXPERIMENTAL feature and may be
+removed in the future.  Format: boolean; default value: false.
+.if !\n(Pb .ig Ig
+[internal type: boolean]
+.Ig
+.Al job_nanny
+Enables the experimental "job deletion nanny" feature.  All job cancels will
+create a repeating task that will resend KILL signals if the initial job cancel
+failed.  Further job cancels will be rejected with the message "job cancel in
+progress." This is useful for temporary failures with a job's execution node
+during a job delete request.  It is possible that the job nanny might interfere
+with job restarts, migrations, and checkpointing.  This is an EXPERIMENTAL
+feature and may be removed in the future.  Format: boolean; default value: false.
+.if !\n(Pb .ig Ig
+[internal type: boolean]
+.Ig
 .Al job_stat_rate
 Moderates how often job stat requests will be issued from pbs_server
 to the MOM daemons.  If poll_jobs is unset or false, then all jobs that
