@@ -121,3 +121,5 @@ ATTR_ndchkrate,
 ATTR_tcptimeout,
 ATTR_jobstatrate,
 ATTR_polljobs,
+ATTR_downonerror,
+ATTR_jobnanny,
