@@ -126,6 +126,8 @@ enum srv_atr {
         SRV_ATR_JobStatRate,
 	SRV_ATR_PollJobs,
         SRV_ATR_LogLevel,
+        SRV_ATR_DownOnError,
+        SRV_ATR_JobNanny,
 #include "site_svr_attr_enum.h"
 	SRV_ATR_version,
 	/* This must be last */
