@@ -1,6 +1,8 @@
 1.2.0p6
-  
-  enabled arch string (CRI)
+
+  added $headnode mom config (CRI) 
+  enabled opsys mom confing (USC) 
+  enabled arch mom config (CRI)
   fixed qrun based default scheduling to ignore down nodes (USC)
   disable unsetting of key/integer server parameters (USC)
   allow FC4 support - quota struct fix (USC)
